# grokking

./: .gitignore  README.md  config.yaml  pyproject.toml  setup.py
notebooks/: analysis-boilerplate.ipynb  analysis.ipynb
scripts/: data.py  experiments.jl  experiments.py  job.slurm  multitask.slurm  train.py
src/: models.py  utils.py
src/grokking/: data.py  models.py  utils.py
tests/: config-with-lists.yaml  config-with-nested-entries.yaml  test_data.py  test_utils.py
