[project]
name = "grokking"
version = "0.1.0"
dependencies = [
    "pyyaml>=6.0.1",
    "torch>=2.4.0",
    "wandb>=0.17.5",
    "accelerate>=0.33.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "types-pyyaml>=6.0.12.20240808",
    "types-tqdm>=4.66.0.20240417",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/grokking"]

[[tool.mypy.overrides]]
module = "accelerate"
ignore_missing_imports = true